examples/test/testpolicy4339.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4339
  namespace: namespace406
spec:
  podSelector:
    matchLabels:
      key9: value32
      key25: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value41
          key33: value35
          key42: value49
      podSelector:
        matchLabels:
          key14: value13
